<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Mycelium Bitcoin Wallet</string>
    <string name="app_short_name">Mycelium</string>
    <string name="add_account_title">Add New Account</string>
    <string name="add_unrelated_account_title">Add Unrelated Account</string>
    <string name="import_seed_title">Import Master Seed</string>
    <string name="import_words_title">Enter Word List</string>
    <string name="add_account_desc">Mycelium supports Bitcoin HD Accounts, Bitcoin Single Address Accounts and Ethereum Account. All created Bitcoin HD Accounts and Ethereum Account are based on the same Master Seed.</string>
    <string name="add_single_acc_info">In order to add a Single Address Account based on a private key or a read-only address, please click the Advanced button below.</string>
    <string name="scan_desc">Scan Bitcoin address, private key or HD Bitcoin-Account.</string>
    <string name="scan_seed">Scan Master Seed from Mycelium Backup</string>
    <string name="use_acc_first">You can only have one unused HD Bitcoin Account.</string>
    <string name="clipboard_desc">Import Bitcoin address or private key from clipboard.</string>
    <string name="wordlist_des">Create Master Seed from Word List</string>
    <string name="scan">Scan</string>
    <string name="advanced">Advanced &amp; More</string>
    <string name="clipboard">Clipboard</string>
    <string name="enter_wordlist">Enter Word List</string>
    <string name="hd_account">Add Bitcoin HD Account</string>
    <string name="btcvault_hd_account">Add Bitcoin Vault HD Account</string>
    <string name="close">Close</string>
    <string name="sending">Sending %1$s</string>
    <string name="receiving">Receiving %1$s</string>
    <string name="confirmations">%d Confirmations</string>
    <string name="send">Send</string>
    <string name="send_cointype">Send %1$s</string>
    <string name="receive">Receive</string>
    <string name="receive_cointype">Receive %1$s</string>
    <string name="private_key_deleted">Private key deleted.</string>
    <string name="account_deleted">Account deleted.</string>
    <string name="amount_hint">0.00</string>
    <string name="amount_hint_denomination">0.00 %1$s</string>
    <string name="enter_recipient_title">Send to</string>
    <string name="enter_recipient_hint">%1$s Address or FIO Name</string>
    <string name="enter_recipient_description">Enter %1$s Address or FIO Name</string>
    <string name="recipient_title">Enter recipient address:</string>
    <string name="amount_label">Amount:</string>
    <string name="amount_label_s">Amount: %s</string>
    <string name="amount_title">Amount</string>
    <string name="enter_amount_title">Enter Amount:</string>
    <string name="crypto_address">%1$s Address:</string>
    <string name="max_btc">Spendable: %1$s</string>
    <string name="max_fiat">Spendable: %1$s %2$s</string>
    <string name="s_payment_request">%s Payment Request</string>
    <string name="share_address">Share Address</string>
    <string name="share_address_and_amount">Share Address and Amount</string>
    <string name="s_fio_request">%s FIO Request</string>
    <string name="qr_code">QR Code</string>
    <string name="my_addresses">My Addresses</string>
    <string name="insufficient_funds">Insufficient funds</string>
    <string name="tx_build_error">Unknown error while building transaction.</string>
    <string name="insufficient_funds_for_fee">Insufficient funds to pay fee</string>
    <string name="amount_too_small">The amount you are sending is too small</string>
    <string name="unable_to_build_tx">Unable to build transaction. %s</string>
    <string name="no_utxo">Transaction has no utxo to form a child transaction or utxo has been already spent</string>
    <string name="parent_needs_no_boosting">Parent needs no boosting</string>
    <string name="amount_too_small_short">Amount must exceed %s (network limit)</string>
    <string name="miner_fee_label">Miner fees</string>
    <string name="miner_fee_title">Miner Fee</string>
    <string name="history_row_miner_fee_label">Transaction fee</string>
    <string name="synchronizing">Synchronizing</string>
    <string name="transaction_not_sent">Failed to broadcast transaction</string>
    <string name="transaction_not_sent_nonstandard">Failed to broadcast transaction because of an error:\n%1$s\nPlease report this incident to tech support.\nRaw transaction was copied to clipboard, if possible please attach it to your request.</string>
    <string name="transaction_not_sent_small_fee">Failed to broadcast transaction. Fee is too small. Please try setting a higher one.</string>
    <string name="queue_transaction_message">Failed to broadcast transaction.\nWould you like to queue the transaction so it gets sent automatically once you get online?</string>
    <string name="transaction_sent">Transaction sent.</string>
    <string name="export">Export account keys</string>
    <string name="export_private_key_red_warning">Only copy this key in a secure environment.\nAnyone who has access to it gains control over all current and in the future available bitcoin for this account.\n\nLong-press here to show the \nQR-Code </string>
    <string name="export_toggle_xpub">xpub</string>
    <string name="export_toggle_ypub">ypub</string>
    <string name="export_toggle_zpub">zpub</string>
    <string name="export_toggle_xprv">xprv</string>
    <string name="export_toggle_p2sh">P2SH</string>
    <string name="export_toggle_legacy">Legacy (P2PKH)</string>
    <string name="export_toggle_p2wpkh">P2WPKH</string>
    <string name="export_toggle_yprv">yprv</string>
    <string name="export_toggle_zprv">zprv</string>
    <string name="backup_private_key">Backup</string>
    <string name="copy_to_clipboard">Copy to Clipboard</string>
    <string name="copy_address_to_clipboard">Copy address to Clipboard</string>
    <string name="copy_amount_to_clipboard">Copy amount to Clipboard</string>
    <string name="copy_private_key_to_clipboard">Copy Private Key to Clipboard</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="private_key">Private Key</string>
    <string name="bitcoin_address_title">Bitcoin Address</string>
    <string name="approximate_fiat_value">%2$s %1$s</string>
    <string name="no_server_connection">No %s Server Connection</string>
    <string name="no_network_connection">No Network Connection</string>
    <string name="interrupted_by_application">Interrupted by application</string>
    <string name="invalid_bitcoin_uri">Invalid Bitcoin URI</string>
    <string name="unrecognized_format">Unrecognized format</string>
    <string name="unrecognized_private_key_format">Unrecognized private key format</string>
    <string name="no_transaction_records">This page shows your transaction history.\n\nThere are currently no transactions to show.</string>
    <string name="too_many_transaction_records">Cannot fetch full account transaction history due to its huge size. Consider moving funds to a new account.</string>
    <string name="no_address_book_records">This page shows your address book.\n\nYour address book is empty.</string>
    <string name="name">Name</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="edit_address_label_title">Edit Address Label</string>
    <string name="enter_address_label_title">Enter Address Label</string>
    <string name="enter_transaction_label_title">Enter Transaction Label</string>
    <string name="set_label">Set Label</string>
    <string name="show_details">Show Details</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="hash">Hash</string>
    <string name="confirmed">Confirmed</string>
    <string name="date">Date</string>
    <string name="inputs">Inputs</string>
    <string name="outputs">Outputs</string>
    <string name="confirmed_in_block">In block #%1$d</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="value">Value</string>
    <string name="gas_limit">Gas Limit</string>
    <string name="gas_used">Gas Used</string>
    <string name="gas_price">Gas Price</string>
    <string name="nonce">Nonce</string>
    <string name="eth_internal_transfer">(%s has been transferred to the caller)</string>
    <string name="replace_transaction">Transaction to be replaced with:</string>
    <string name="input_data">Input Data</string>
    <string name="input_data_format">Input Data format</string>
    <string name="input_data_format_desc">The Input Data should be in hexadecimal form. Start with \'0x\' prefix is not necessary, it is inserted automatically if needed.</string>
    <string name="pref_category_pin">PIN Settings</string>
    <string name="randomize_pin">Randomize PIN pad</string>
    <string name="randomize_pin_text">Considerably improves security by randomizing PIN pad layout</string>
    <string name="pref_clear_pin">Clear PIN Code</string>
    <string name="pref_clear_pin_summary">Clear the current PIN code</string>
    <string name="pref_set_pin">Set PIN Code</string>
    <string name="pref_set_pin_summary">Set a PIN code that restricts access to sending coins, exporting private keys, and changing the PIN code</string>
    <string name="pref_local_currency">Fiat Currencies</string>
    <string name="pref_local_currency_with_currency">Fiat Currency (%1$s)</string>
    <string name="pref_local_currency_summary">Select the local fiat currency</string>
    <string name="pref_exchange_source">Exchange source</string>
    <string name="pref_exchange_source_with_value">Exchange Source (%1$s)</string>
    <string name="pref_exchange_source_summary">Select the source for obtaining exchange rates between cryptocurrency and fiat currencies</string>
    <string name="pref_bitcoin_denomination">Cryptocurrency denomination</string>
    <string name="pref_bitcoin_denomination_with_denomination">Cryptocurrency denomination (%1$s)</string>
    <string name="pref_bitcoin_denomination_summary">Set preferred cryptocurrency denomination</string>
    <string name="pref_advanced_settings">Advanced Settings</string>
    <string name="pref_socks_proxy">Socks Proxy</string>
    <string name="pref_socks_proxy_enabled">Socks Proxy (Enabled)</string>
    <string name="pref_socks_proxy_not_enabled">Socks Proxy (Not enabled)</string>
    <string name="pref_socks_proxy_summary">Communicate through restrictive firewalls or through Tor using Orbot. Enter a host name and port, e.g. \'localhost:9050\'</string>
    <string name="pref_pin_require_on_startup_summary">To improve your privacy</string>
    <string name="pref_pin_require_on_startup">Require PIN on start</string>
    <string name="settings">Settings</string>
    <string name="pin_backup_first">You cannot set a PIN before you have made a backup of your master seed.</string>
    <string name="pin_invalid_pin">Invalid PIN code</string>
    <string name="pin_enter_pin">Enter PIN Code</string>
    <string name="no_funds">No funds</string>
    <string name="buy_crypto_popular_fiats">Popular fiats:</string>
    <string name="buy_crypto_all_supported_fiats">All supported fiats:</string>
    <string name="buy_crypto_detailed_transaction_details">Transaction details</string>
    <string name="buy_crypto_detailed_you_send">You send</string>
    <string name="buy_crypto_detailed_you_get">You get</string>
    <string name="buy_crypto_detailed_exchange_rate">Exchange rate</string>
    <string name="buy_crypto_detailed_powered_by">Powered by</string>
    <string name="buy_crypto_detailed_changelly">Changelly</string>
    <string name="buy_crypto_detailed_selected_method">Selected method</string>
    <string name="buy_crypto_detailed_back">Back</string>
    <string name="buy_crypto_detailed_confirm">Confirm</string>
</resources>